tests/invalid/garbage.s
  .text

  .global _start
_start:
qwgxyfuwnfxguiwnfi
uiwfe

uiwfe
